test/types/range/bradc/strideRangeSlice2.future
unimplemented feature: slicing strided ranges/domains

We don't currently support the slicing of strided ranges.

There is some question in my mind as to whether slicing a strided
range with a strided range should cause the strides to accumulate (via
multiplication) or whether it should be treated as an intersection
operator.  In the case of sparsity, I imagine that one should be able
to slice a sparse domain/range with a dense domain/range and get the
sparse indices within the dense bounding box, which suggests the
intersection principle (but doesn't rule out the accumulation
principle as well).  Anyway, I've created the .good file assuming
intersection, with some question as to how the intersection in line 3
should be stored/print out.
